# kube-logs-generator

./: Cargo.toml  Dockerfile  LICENSE  ReadMe.md
src/: main.rs  structures.rs
