[package]
name = "kube-logs-generator"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
lazy_static = "1.4.0"
reqwest = { version = "0.11.12", features = ["json", "blocking"] }
rev_buf_reader = "0.3.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1.21.2", features = ["full"] }
